# xujie

./: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
.backup/: App.tsx.bak  (+3 more)
app/: .env  README.md  config.py  main.py  pyproject.toml
app/api/v1/endpoints/: learning_path.py  materials.py
app/core/: kimi.py  knowledge_base.py  materials_base.py
app/data/study_materials/: materials.json
app/data/study_methods/: methods.json
app/schemas/: learning_path.py  materials.py
app/services/: method_matcher.py  path_generator.py  task_generator.py
backend/: .env  .env.example  Procfile  fly.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  knowledge_base.py  learning_path_generator.py  materials_knowledge_base.py  personalized_method_generator.py  task_generator.py
backend/app/models/: study_material.py  study_method.py
backend/app/scripts/: test_knowledge_base.py  test_learning_path_generator.py  test_materials_knowledge_base.py  test_personalized_method_generator.py  test_study_methods_api.py  test_task_generator.py
backend/app/scripts/data_collection/: study_materials_collector.py  study_methods_collector.py
backend/data/knowledge_base/: materials.index  materials.json  methods.index  methods.json
backend/data/study_materials/: sample_materials.json
backend/data/study_methods/: sample_methods.json
backend/src/: main.ts
backend/src/data/: materials.json
backend/src/routes/: learning-path.ts  materials.ts
backend/src/services/: kimi.ts  materials.ts
backend/src/types/: index.ts
(+64 files in other folders)
